# crackmes

./: .clang-format  .gitignore  CMakeLists.txt  README.md  requirements.txt
cm01/: CMakeLists.txt  main.c
cm02/: CMakeLists.txt  gen.py  main.c
cm03/: CMakeLists.txt  OTP.hpp  main.cpp  test.cpp  totp.cpp
cm04/: CMakeLists.txt  compress_loader.cpp  compress_packer.cpp  inspector.py  loader.c  loader_2.c  main.cpp  no_relocation_loader.cpp  packer.cpp
cm04/packer1/: CMakeLists.txt
cm04/packer2/: CMakeLists.txt  loader.c  packer.cpp
cm04/packer3/: CMakeLists.txt  compress_loader.cpp  compress_packer.cpp
cm04/packer4/: CMakeLists.txt  loader.cpp  packer.cpp
