add_executable(cm02-easy main.c)
if(${CMAKE_BUILD_TYPE} MATCHES Release|RelWithDeb)
	target_compile_options(cm02-easy PRIVATE /MD /Wall /Od /Ob0)
elseif(${CMAKE_BUILD_TYPE} MATCHES Debug)
	target_compile_options(cm02-easy PRIVATE /MDd /Wall)
endif()

add_executable(cm02-normal main.c)
if(${CMAKE_BUILD_TYPE} MATCHES Release|RelWithDeb)
	target_compile_options(cm02-normal PRIVATE /MD /Wall /O1 /Ob0)
elseif(${CMAKE_BUILD_TYPE} MATCHES Debug)
	target_compile_options(cm02-normal PRIVATE /MDd /Wall)
endif()

add_executable(cm02-hard main.c)
if(${CMAKE_BUILD_TYPE} MATCHES Release|RelWithDeb)
	target_compile_options(cm02-easy PRIVATE /MD /Wall /O2)
elseif(${CMAKE_BUILD_TYPE} MATCHES Debug)
	target_compile_options(cm02-easy PRIVATE /MDd /Wall)
endif()
